--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <input type="number" id="x"/><br>
         <input type="number" id="y"/><br>
         <input type="number" id="z"/><br>
+        <input type="text" id="resultado"/><br>
         <input type="button" value="Aceptar" onclick="media()" />
     </form>        
 </body>
